--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="stat">СТАТИСТИКА</string>
     <string name="receipts">ЧЕКИ</string>
     <string name="info">ИНФОРМАЦИЯ</string>
+    <string name="title_current_session">Текущая смена №%d</string>
     <string name="title_time_to_close">Время до закрытия смены</string>
     <string name="title_common_sum">Общая сума фискализации</string>
     <string name="title_receipts_count">Общее количество чеков</string>
