При открытии меню проверяем, есть ли в наличии SMS сервер, если нет, то делаем ползунок не активным и показываем вспрывающее уведомление.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="service_description">Предназначен для работы приложения в фоне</string>
     <string name="yes">ДА</string>
     <string name="no">НЕТ</string>
+    <string name="sms_server_google_play_link">https://play.google.com/store/apps/details?id=ru.softvillage.smsserver</string>
 
     <string-array name="time_unit">
         <item>мин.</item>
