--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="title_send_email_settings">НАСТРОЙКА ОТПРАВКИ E-MAIL</string>
     <string name="title_send_from_evotor">Отправка через сервис Evotor</string>
     <string name="title_send_from_sv">Отправка через сервис Soft-Village</string>
+    <string name="title_about">О приложении</string>
     <string name="exit_up">ВЫЙТИ</string>
     <string name="title_dialog_exit">Закрыть фискализатор?</string>
     <string name="cancel_low">Отмена</string>
@@ -91,5 +92,12 @@
     <string name="title_fn_num">ФН № %d</string>
     <string name="title_inn_num">ИНН: %d</string>
     <string name="title_empty_receipt_list">Журнал чеков пуст</string>
+
+    <string name="about_menu_title_feedback">Обратная связь</string>
+    <string name="about_menu_title_rate_the_app">Оцените приложение</string>
+    <string name="about_menu_title_privacy_policy">Политика конфиденциальности</string>
+    <string name="about_menu_title_user_agreement">Пользовательское соглашение</string>
+    <string name="about_menu_title_licenses">Лицензии</string>
+    <string name="about_menu_title_data_protection">Защита данных</string>
 
 </resources>
